--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -3138,19 +3138,20 @@ footer {
 @media (min-width: 300px) {
   header {
     div.nav {
-      div.navbar {
-        div.menu {
-          ul {
-            li {
-              a {
-                font-size: calc(0.875rem + ((1vw - 3px) * 0.1235));
-                min-height: 0vw;
-                letter-spacing: 1px;
-              }
+
+      div.menu {
+
+        ul {
+          li {
+            width: 80%;
+            a {
+              font-size: calc(1.25rem + ((1vw - 3px) * 0.3704));
+    min-height: 0vw;
             }
           }
         }
       }
+
     }
 
     div.main {
