--- a/mila_website/css/style.css
+++ b/mila_website/css/style.css
@@ -2297,8 +2297,7 @@ footer .credit p i {
     width: 80%;
   }
   header div.nav div.menu ul li a {
-    font-size: calc(1.25rem + ((1vw - 3px) * 0.3704));
-    min-height: 0vw;
+    font-size: 1rem;
   }
   header div.main div.left div.topline p {
     font-size: calc(2.375rem + ((1vw - 3px) * 6.5432));
