--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -3145,8 +3145,9 @@ footer {
           li {
             width: 80%;
             a {
-              font-size: calc(1.25rem + ((1vw - 3px) * 0.3704));
-    min-height: 0vw;
+    //           font-size: calc(1.25rem + ((1vw - 3px) * 0.3704));
+    // min-height: 0vw;
+    font-size: 1rem;
             }
           }
         }
