--- a/mila_website/css/style.css
+++ b/mila_website/css/style.css
@@ -330,7 +330,7 @@ header div.nav div.logo {
 }
 header div.nav div.logo a img {
   transition: width 0.5s ease;
-  width: 80%;
+  width: 50%;
   height: auto;
 }
 header div.nav div.menu ul {
@@ -371,7 +371,7 @@ header div.nav.scrolled div.logo {
   transition: width 0.5s ease;
 }
 header div.nav.scrolled div.logo a img {
-  width: 70%;
+  width: 50%;
   height: auto;
 }
 header div.main {
@@ -534,7 +534,7 @@ section.innovation div.container {
 }
 section.innovation div.container div.content {
   width: calc(100% - 2px);
-  padding: 10% 0%;
+  padding: 15% 0%;
   display: flex;
   justify-content: space-between;
 }
@@ -669,11 +669,14 @@ section.target div.content {
 }
 section.target div.content div.container {
   width: 100%;
-  padding: 5% 0%;
+  padding: 2% 0%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 5%;
+}
+section.target div.content div.container div.card {
+  position: relative;
+  margin: 3% 2%;
 }
 section.target div.content div.container div.card div.icon {
   background: url('../assets/img/mila_train.jpg');
@@ -693,6 +696,13 @@ section.target div.content div.container div.card div.icon .fa {
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
+}
+section.target div.content div.container div.card div.icon video {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 40%;
+  height: auto;
 }
 section.target div.content div.container div.card div.slide {
   height: 300px;
@@ -721,19 +731,6 @@ section.target div.content div.container div.card div.slide.slide1 .content .tit
   text-transform: uppercase;
   text-align: center;
 }
-section.target div.content div.container div.card:hover .icon {
-  transition: 0.7s;
-  background: url('../assets/img/mila_trainhover.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-section.target div.content div.container div.card:hover .slide.slide1 {
-  transform: translateY(0px);
-}
-section.target div.content div.container div.card:hover .slide.slide2 {
-  transform: translateY(0);
-}
 section.target div.content div.container div.card div.slide1:after {
   background: #181818;
   bottom: 15px;
@@ -747,7 +744,7 @@ section.target div.content div.container div.card div.slide1:after {
 section.target div.content div.container div.card div.slide,
 section.target div.content div.container div.card div.slide2 {
   align-items: center;
-  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
+  box-shadow: -1px -2px 40px rgba(0, 0, 0, 0.4);
   box-sizing: border-box;
   display: flex;
   justify-content: center;
@@ -776,22 +773,8 @@ section.target div.content div.container div.card:nth-of-type(2) .icon {
   background-size: cover;
   background-repeat: no-repeat;
 }
-section.target div.content div.container div.card:nth-of-type(2) .icon:hover {
-  transition: 0.7s;
-  background: url('../assets/img/casinohover.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
 section.target div.content div.container div.card:nth-of-type(3) .icon {
   background: url('../assets/img/musee.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-section.target div.content div.container div.card:nth-of-type(3) .icon:hover {
-  transition: 0.7s;
-  background: url('../assets/img/museehover.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -802,20 +785,47 @@ section.target div.content div.container div.card:nth-of-type(4) .icon {
   background-size: cover;
   background-repeat: no-repeat;
 }
-section.target div.content div.container div.card:nth-of-type(4) .icon:hover {
-  transition: 0.7s;
-  background: url('../assets/img/mila_centreshover2.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
 section.target div.content div.container div.card:nth-of-type(5) .icon {
   background: url('../assets/img/pdv.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
-section.target div.content div.container div.card:nth-of-type(5) .icon:hover {
+section.target div.content div.container div.card.active .icon {
+  transition: 0.7s;
+  background: url('../assets/img/mila_trainhover.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+section.target div.content div.container div.card.active .slide.slide1 {
+  transform: translateY(0px);
+}
+section.target div.content div.container div.card.active .slide.slide2 {
+  transform: translateY(0);
+}
+section.target div.content div.container div.card.active:nth-of-type(2) .icon {
+  transition: 0.7s;
+  background: url('../assets/img/casinohover.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+section.target div.content div.container div.card.active:nth-of-type(3) .icon {
+  transition: 0.7s;
+  background: url('../assets/img/museehover.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+section.target div.content div.container div.card.active:nth-of-type(4) .icon {
+  transition: 0.7s;
+  background: url('../assets/img/mila_centreshover2.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+section.target div.content div.container div.card.active:nth-of-type(5) .icon {
   transition: 0.7s;
   background: url('../assets/img/pdvhover.jpg');
   background-position: center;
@@ -1298,7 +1308,7 @@ footer .credit p i {
     transition: width 0.5s ease;
   }
   header div.nav.scrolled div.logo a img {
-    width: 70%;
+    width: 50%;
     height: auto;
   }
   header div.main {
@@ -1393,12 +1403,6 @@ footer .credit p i {
   }
   header .divider div p:nth-of-type(3) span {
     font-weight: 500;
-  }
-  section.target div.topline div.gauche div p {
-    font-size: 2.8rem;
-  }
-  section.target div.topline div.gauche div:nth-of-type(2) p {
-    font-size: 1.8rem;
   }
   section.target div.topline div.droite div::before {
     position: absolute;
@@ -1509,7 +1513,7 @@ footer .credit p i {
 /* ------------------------------------------------------------------------- */
 @media (max-width: 1440px) {
   header div.nav div.logo a img {
-    width: 80%;
+    width: 50%;
     height: auto;
   }
   section.fonctions .content .left .details .gauche {
@@ -1524,8 +1528,22 @@ footer .credit p i {
 /* ------------------------------ 1024px ----------------------------------- */
 /* ------------------------------------------------------------------------- */
 @media (max-width: 1024px) {
+  section.target .topline {
+    width: 100%!important;
+    justify-content: center!important;
+    padding: 0% 3%;
+  }
   section.target .topline .gauche div p {
-    font-size: 2.8rem;
+    text-align: center;
+  }
+  section.target .topline .gauche div:nth-of-type(2) p {
+    text-align: center!important;
+  }
+  section.target .topline .droite {
+    display: none;
+  }
+  section.target .content {
+    padding: 3% 0%;
   }
   section.fonctions {
     display: flex;
@@ -1772,12 +1790,6 @@ footer .credit p i {
   section.target div.topline {
     width: 80%;
   }
-  section.target div.topline div.gauche div p {
-    font-size: 2rem;
-  }
-  section.target div.topline div.gauche div:nth-of-type(2) p {
-    font-size: 1.3rem;
-  }
   section.fonctions {
     display: flex;
     justify-content: center;
@@ -1909,8 +1921,8 @@ footer .credit p i {
     margin-bottom: 5%;
   }
   section.target div.topline {
-    width: 80%;
-    padding: 0% 0%;
+    width: 100%;
+    padding: 0% 3%;
     flex-direction: column;
     gap: 30%;
   }
@@ -1919,11 +1931,9 @@ footer .credit p i {
   }
   section.target div.topline div.gauche div p {
     text-align: center;
-    font-size: 1.5rem;
   }
   section.target div.topline div.gauche div:nth-of-type(2) p {
     text-align: center;
-    font-size: 1.2rem;
   }
   section.target div.topline div.droite {
     align-self: flex-end;
@@ -2297,7 +2307,7 @@ footer .credit p i {
     width: 80%;
   }
   header div.nav div.menu ul li a {
-    font-size: 1rem;
+    font-size: 0.8rem;
   }
   header div.main div.left div.topline p {
     font-size: calc(2.375rem + ((1vw - 3px) * 6.5432));
@@ -2374,6 +2384,14 @@ footer .credit p i {
   }
   section.innovation div.container div.bottom div p {
     font-size: calc(0.625rem + ((1vw - 3px) * 1.358));
+    min-height: 0vw;
+  }
+  section.target div.topline div.gauche div p {
+    font-size: calc(1.5rem + ((1vw - 3px) * 2.4691));
+    min-height: 0vw;
+  }
+  section.target div.topline div.gauche div:nth-of-type(2) p {
+    font-size: calc(1.125rem + ((1vw - 3px) * 0.8642));
     min-height: 0vw;
   }
   section.custom div.content div.droite div.title p {
