--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -205,7 +205,7 @@ header {
       a {
         img {
           transition: width 0.5s ease;
-          width: 80%;
+          width: 50%;
           height: auto;
         }
       }
@@ -259,7 +259,7 @@ header {
 
       a {
         img {
-          width: 70%;
+          width: 50%;
           height: auto;
         }
       }
@@ -459,7 +459,7 @@ section.innovation {
 
     div.content {
       width: calc(100% - 2px);
-      padding: 10% 0%;
+      padding: 15% 0%;
       display: flex;
       justify-content: space-between;
 
@@ -765,13 +765,14 @@ section.target {
 
     div.container {
       width: 100%;
-      padding: 5% 0%;
+      padding: 2% 0%;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 5%;
 
       div.card {
+        position: relative;
+        margin: 3% 2%;
         div.icon {
           background: url('../assets/img/mila_train.jpg');
           background-position: center;
@@ -790,6 +791,14 @@ section.target {
             position: absolute;
             top: 50%;
             transform: translate(-50%, -50%);
+          }
+
+          video{
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            width: 40%;
+            height: auto;
           }
         }
 
@@ -826,25 +835,6 @@ section.target {
           }
         }
 
-        &:hover {
-          .icon {
-            transition: 0.7s;
-            background: url('../assets/img/mila_trainhover.jpg');
-            background-position: center;
-            background-size: cover;
-            background-repeat: no-repeat;
-          }
-
-          .slide.slide1 {
-            transform: translateY(0px);
-
-          }
-
-          .slide.slide2 {
-            transform: translateY(0);
-          }
-        }
-
         div.slide1{
           
           &:after {
@@ -861,7 +851,7 @@ section.target {
         div.slide,
         div.slide2 {
           align-items: center;
-          box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
+          box-shadow: -1px -2px 40px rgba(0, 0, 0, 0.4);
           box-sizing: border-box;
           display: flex;
           justify-content: center;
@@ -892,14 +882,6 @@ section.target {
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
-
-            &:hover {
-              transition: 0.7s;
-              background: url('../assets/img/casinohover.jpg');
-              background-position: center;
-              background-size: cover;
-              background-repeat: no-repeat;
-            }
           }
         }
 
@@ -909,14 +891,6 @@ section.target {
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
-
-            &:hover {
-              transition: 0.7s;
-              background: url('../assets/img/museehover.jpg');
-              background-position: center;
-              background-size: cover;
-              background-repeat: no-repeat;
-            }
           }
         }
 
@@ -926,14 +900,6 @@ section.target {
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
-
-            &:hover {
-              transition: 0.7s;
-              background: url('../assets/img/mila_centreshover2.jpg');
-              background-position: center;
-              background-size: cover;
-              background-repeat: no-repeat;
-            }
           }
         }
 
@@ -943,14 +909,64 @@ section.target {
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
+          }
+        }
+      }
+      div.card.active {
+        .icon {
+          transition: 0.7s;
+          background: url('../assets/img/mila_trainhover.jpg');
+          background-position: center;
+          background-size: cover;
+          background-repeat: no-repeat;
+        }
 
-            &:hover {
-              transition: 0.7s;
-              background: url('../assets/img/pdvhover.jpg');
-              background-position: center;
-              background-size: cover;
-              background-repeat: no-repeat;
-            }
+        .slide.slide1 {
+          transform: translateY(0px);
+
+        }
+
+        .slide.slide2 {
+          transform: translateY(0);
+        }
+
+        &:nth-of-type(2){
+          .icon{
+            transition: 0.7s;
+            background: url('../assets/img/casinohover.jpg');
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+          }
+        }
+
+        &:nth-of-type(3){
+          .icon{
+            transition: 0.7s;
+            background: url('../assets/img/museehover.jpg');
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+          }
+        }
+
+        &:nth-of-type(4){
+          .icon{
+            transition: 0.7s;
+            background: url('../assets/img/mila_centreshover2.jpg');
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+          }
+        }
+
+        &:nth-of-type(5){
+          .icon{
+            transition: 0.7s;
+            background: url('../assets/img/pdvhover.jpg');
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
           }
         }
       }
@@ -1544,7 +1560,7 @@ footer {
 
         a {
           img {
-            width: 70%;
+            width: 50%;
             height: auto;
           }
         }
@@ -1672,19 +1688,6 @@ footer {
 
   section.target {
     div.topline {
-      div.gauche {
-        div {
-          p {
-            font-size: 2.8rem;
-          }
-
-          &:nth-of-type(2) {
-            p {
-              font-size: 1.8rem;
-            }
-          }
-        }
-      }
 
       div.droite {
         div {
@@ -1843,7 +1846,7 @@ footer {
       div.logo {
         a {
           img {
-            width: 80%;
+            width: 50%;
             height: auto;
           }
         }
@@ -1883,13 +1886,29 @@ footer {
 
   section.target {
     .topline {
+      width: 100%!important;
+      justify-content: center!important;
+      padding: 0% 3%;
       .gauche {
         div {
           p {
-            font-size: 2.8rem;
+            text-align: center;
+
+          }
+          &:nth-of-type(2){
+            p{
+              text-align: center!important;
+
+            }
           }
         }
       }
+      .droite{
+        display: none;
+      }
+    }
+    .content{
+      padding: 3% 0%;
     }
   }
 
@@ -2225,13 +2244,9 @@ footer {
 
       div.gauche {
         div {
-          p {
-            font-size: 2rem;
-          }
 
           &:nth-of-type(2) {
             p {
-              font-size: 1.3rem;
             }
           }
         }
@@ -2459,8 +2474,8 @@ footer {
     margin-bottom: 5%;
 
     div.topline {
-      width: 80%;
-      padding: 0% 0%;
+      width: 100%;
+      padding: 0% 3%;
       flex-direction: column;
       gap: 30%;
 
@@ -2470,13 +2485,11 @@ footer {
         div {
           p {
             text-align: center;
-            font-size: 1.5rem;
           }
 
           &:nth-of-type(2) {
             p {
               text-align: center;
-              font-size: 1.2rem;
             }
           }
         }
@@ -3073,8 +3086,6 @@ footer {
         }
       }
 
-      div.logo {}
-
       div.menu {
         height: 100vh;
         width: 100%;
@@ -3145,9 +3156,7 @@ footer {
           li {
             width: 80%;
             a {
-    //           font-size: calc(1.25rem + ((1vw - 3px) * 0.3704));
-    // min-height: 0vw;
-    font-size: 1rem;
+            font-size: 0.8rem;
             }
           }
         }
@@ -3279,6 +3288,25 @@ footer {
           p {
             font-size: calc(0.625rem + ((1vw - 3px) * 1.358));
             min-height: 0vw;
+          }
+        }
+      }
+    }
+  }
+
+  section.target {
+    div.topline {
+      div.gauche {
+        div {
+          p{
+            font-size: calc(1.5rem + ((1vw - 3px) * 2.4691));
+            min-height: 0vw;
+          }
+          &:nth-of-type(2) {
+            p {
+              font-size: calc(1.125rem + ((1vw - 3px) * 0.8642));
+              min-height: 0vw;
+            }
           }
         }
       }
