--- a/mila_website/css/style.css
+++ b/mila_website/css/style.css
@@ -1869,6 +1869,17 @@ footer .credit p i {
   }
 }
 /* ------------------------------------------------------------------------- */
+/* ------------------------------ 600px ----------------------------------- */
+/* ------------------------------------------------------------------------- */
+@media (max-width: 600px) {
+  section.target .content {
+    width: 90%!important;
+  }
+  section.target .content .container .card .slide {
+    width: 100%!important;
+  }
+}
+/* ------------------------------------------------------------------------- */
 /* ------------------------------ 425px ----------------------------------- */
 /* ------------------------------------------------------------------------- */
 @media (max-width: 425px) {
