--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -2392,6 +2392,28 @@ footer {
 }
 
 /* ------------------------------------------------------------------------- */
+/* ------------------------------ 600px ----------------------------------- */
+/* ------------------------------------------------------------------------- */
+
+
+@media (max-width: 600px) {
+
+  section.target{
+    .content{
+      width: 90%!important;
+      .container{
+        .card {
+          .slide {
+            width: 100%!important;
+          }
+        }
+        }
+    }
+  }
+
+}
+
+/* ------------------------------------------------------------------------- */
 /* ------------------------------ 425px ----------------------------------- */
 /* ------------------------------------------------------------------------- */
 
