--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -1340,6 +1340,10 @@ footer {
       display: flex;
       justify-content: flex-start;
       align-items: flex-end;
+      div{
+        width: 70%;
+        height: auto;
+      }
     }
 
     .right {
@@ -1997,7 +2001,7 @@ footer {
         justify-content: center;
 
         div {
-          width: 60%;
+          width: 65%;
           height: auto;
         }
       }
@@ -2331,8 +2335,10 @@ footer {
 
   section.custom {
     .content {
-      .droite {
-        .title {}
+      .gauche {
+        div {
+          width: 80%;
+        }
       }
     }
 
