--- a/mila_website/css/style.css
+++ b/mila_website/css/style.css
@@ -330,7 +330,7 @@ header div.nav div.logo {
 }
 header div.nav div.logo a img {
   transition: width 0.5s ease;
-  width: 50%;
+  width: 35%;
   height: auto;
 }
 header div.nav div.menu ul {
@@ -371,7 +371,7 @@ header div.nav.scrolled div.logo {
   transition: width 0.5s ease;
 }
 header div.nav.scrolled div.logo a img {
-  width: 50%;
+  width: 35%;
   height: auto;
 }
 header div.main {
@@ -622,7 +622,9 @@ section.target {
   flex-direction: column;
   justify-content: space-evenly;
   padding-top: 10%;
+  height: 100%;
   padding-bottom: 5%;
+  position: relative;
 }
 section.target div.topline {
   width: 75%;
@@ -665,172 +667,138 @@ section.target div.topline div.droite div p:nth-of-type(2) {
   font-size: 20px;
 }
 section.target div.content {
-  width: 75%;
+  width: 85%;
+  height: 100%;
+  padding: 5% 0%;
 }
 section.target div.content div.container {
   width: 100%;
-  padding: 2% 0%;
+  height: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-section.target div.content div.container div.card {
-  position: relative;
-  margin: 5% 2%;
-}
-section.target div.content div.container div.card div.icon {
-  background: url('../assets/img/mila_train.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+section.target div.content div.container article {
+  flex: 1;
   height: 100%;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 100%;
+  transition: 1.2s ease;
 }
-section.target div.content div.container div.card div.icon .fa {
-  color: #ffffff;
-  font-size: 80px;
-  left: 50%;
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
-section.target div.content div.container div.card div.icon video {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 40%;
-  height: auto;
-}
-section.target div.content div.container div.card div.slide {
-  height: 300px;
-  transition: 0.5s;
-  width: 500px;
-}
-section.target div.content div.container div.card div.slide.slide1 {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  position: relative;
-  transform: translateY(200px);
-  transition: 0.7s;
-  z-index: 1;
-}
-section.target div.content div.container div.card div.slide.slide1 .content .titre {
-  padding: 2% 0%;
-  position: absolute;
-  left: 0;
-  top: -13%;
-  width: 100%;
+section.target div.content div.container article .titre {
   background-color: #181818;
 }
-section.target div.content div.container div.card div.slide.slide1 .content .titre p {
-  color: white;
+section.target div.content div.container article .titre p {
   text-transform: uppercase;
   text-align: center;
+  color: white;
 }
-section.target div.content div.container div.card div.slide1:after {
-  background: #181818;
-  bottom: 15px;
-  content: "";
-  height: 4px;
-  left: 50%;
-  position: absolute;
-  transform: translateX(-50%);
-  width: 30px;
-}
-section.target div.content div.container div.card div.slide,
-section.target div.content div.container div.card div.slide2 {
-  align-items: center;
-  box-shadow: -1px -2px 40px rgba(0, 0, 0, 0.4);
-  box-sizing: border-box;
+section.target div.content div.container article .image {
+  transition: 0.7s ease;
   display: flex;
   justify-content: center;
-  padding: 2%;
-  position: relative;
-  transform: translateY(-100px);
-  transition: 0.8s;
-}
-section.target div.content div.container div.card div.slide div.content,
-section.target div.content div.container div.card div.slide2 div.content {
+  align-items: flex-end;
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-}
-section.target div.content div.container div.card div.slide div.content p,
-section.target div.content div.container div.card div.slide2 div.content p {
-  color: #181818;
-  margin: 0;
-  padding: 0;
-}
-section.target div.content div.container div.card:nth-of-type(2) .icon {
-  background: url('../assets/img/casino.jpg');
+  background-image: url('../assets/img/mila_train.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  position: relative;
 }
-section.target div.content div.container div.card:nth-of-type(3) .icon {
-  background: url('../assets/img/musee.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+section.target div.content div.container article .image video {
+  position: absolute;
+  transition: 0.7s ease;
+  width: 60%;
+  height: auto;
+  max-height: 80%;
 }
-section.target div.content div.container div.card:nth-of-type(4) .icon {
-  background: url('../assets/img/mila_centres.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+section.target div.content div.container article .desc {
+  display: none;
+  position: absolute;
+  bottom: 0%;
+  left: 7%;
+  width: 85%;
 }
-section.target div.content div.container div.card:nth-of-type(5) .icon {
-  background: url('../assets/img/pdv.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+section.target div.content div.container article .desc p {
+  font-family: 'krub', sans-serif;
+  font-weight: 600;
+  font-size: 18px;
+  padding-bottom: 1%;
+  text-align: center;
 }
-section.target div.content div.container div.card.active .icon {
-  transition: 0.7s;
-  background: url('../assets/img/mila_trainhover.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+section.target div.content div.container article:hover {
+  transition: 1.2s ease;
+  flex: 3;
 }
-section.target div.content div.container div.card.active .slide.slide1 {
-  transform: translateY(0px);
+section.target div.content div.container article:hover .image {
+  transition: 0.7s ease;
+  justify-content: flex-end;
+  position: relative;
 }
-section.target div.content div.container div.card.active .slide.slide2 {
-  transform: translateY(0);
+section.target div.content div.container article:hover .image video {
+  position: absolute;
+  transition: 0.7s ease;
+  transform: translateX(15%);
+  max-height: 70%;
+  right: 5%;
+  width: auto;
 }
-section.target div.content div.container div.card.active:nth-of-type(2) .icon {
-  transition: 0.7s;
-  background: url('../assets/img/casinohover.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+section.target div.content div.container article:hover .desc {
+  display: block;
 }
-section.target div.content div.container div.card.active:nth-of-type(3) .icon {
-  transition: 0.7s;
-  background: url('../assets/img/museehover.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+section.target div.content div.container article:hover .image {
+  background-image: url('../assets/img/mila_trainhover2.jpg');
 }
-section.target div.content div.container div.card.active:nth-of-type(4) .icon {
-  transition: 0.7s;
-  background: url('../assets/img/mila_centreshover2.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+section.target div.content div.container article:nth-of-type(2) .image {
+  background-image: url('../assets/img/casino.jpg');
 }
-section.target div.content div.container div.card.active:nth-of-type(5) .icon {
-  transition: 0.7s;
-  background: url('../assets/img/pdvhover.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+section.target div.content div.container article:nth-of-type(2):hover {
+  transition: 0.7s ease;
+  flex: 3;
+}
+section.target div.content div.container article:nth-of-type(2):hover .image {
+  background-image: url('../assets/img/casinohover.jpg');
+}
+section.target div.content div.container article:nth-of-type(2):hover .desc {
+  display: block;
+}
+section.target div.content div.container article:nth-of-type(3) .image {
+  background-image: url('../assets/img/musee.jpg');
+}
+section.target div.content div.container article:nth-of-type(3):hover {
+  transition: 0.7s ease;
+  flex: 3;
+}
+section.target div.content div.container article:nth-of-type(3):hover .image {
+  background-image: url('../assets/img/museehov.jpg');
+}
+section.target div.content div.container article:nth-of-type(3):hover .desc {
+  display: block;
+}
+section.target div.content div.container article:nth-of-type(4) .image {
+  background-image: url('../assets/img/mila_centres.jpg');
+}
+section.target div.content div.container article:nth-of-type(4):hover {
+  transition: 0.7s ease;
+  flex: 3;
+}
+section.target div.content div.container article:nth-of-type(4):hover .image {
+  background-image: url('../assets/img/mila_centreshover2.jpg');
+}
+section.target div.content div.container article:nth-of-type(4):hover .desc {
+  display: block;
+}
+section.target div.content div.container article:nth-of-type(5) .image {
+  background-image: url('../assets/img/pdv.jpg');
+}
+section.target div.content div.container article:nth-of-type(5):hover {
+  transition: 0.7s ease;
+  flex: 3;
+}
+section.target div.content div.container article:nth-of-type(5):hover .image {
+  background-image: url('../assets/img/pdvhover.jpg');
+}
+section.target div.content div.container article:nth-of-type(5):hover .desc {
+  display: block;
 }
 section.fonctions {
   display: flex;
@@ -1517,7 +1485,7 @@ footer .credit p i {
 /* ------------------------------------------------------------------------- */
 @media (max-width: 1440px) {
   header div.nav div.logo a img {
-    width: 50%;
+    width: 35%;
     height: auto;
   }
   section.fonctions .content .left .details .gauche {
@@ -1763,8 +1731,8 @@ footer .credit p i {
     height: 80%;
   }
   header div.main div.mid .hero img {
-    width: auto;
-    height: 100%;
+    width: 80%;
+    height: auto;
   }
   header div.main div.right {
     align-items: center;
@@ -1773,7 +1741,6 @@ footer .credit p i {
   }
   header div.main div.right p {
     text-align: center;
-    font-size: 1.1rem;
     padding: 2% 0%;
   }
   header div.main div.right a {
@@ -1887,9 +1854,6 @@ footer .credit p i {
   section.target .content {
     width: 90%!important;
   }
-  section.target .content .container .card .slide {
-    width: 100%!important;
-  }
 }
 /* ------------------------------------------------------------------------- */
 /* ------------------------------ 425px ----------------------------------- */
@@ -1929,11 +1893,11 @@ footer .credit p i {
     display: none;
   }
   header div.nav div.logo a img {
-    width: 50%;
+    width: 35%;
     height: auto;
   }
   header div.nav.scrolled div.logo a img {
-    width: 50%;
+    width: 25%;
     height: auto;
   }
   section.innovation div.container {
@@ -2152,7 +2116,7 @@ footer .credit p i {
     transition: width 0.5s ease;
   }
   header div.nav.scrolled div.logo a img {
-    width: 70%;
+    width: 35%;
     height: auto;
   }
   header div.main div.left div.topline p {
@@ -2350,14 +2314,12 @@ footer .credit p i {
   }
   header .right h1 {
     letter-spacing: 0.125rem;
-    font-size: calc(1.5rem + ((1vw - 3px) * 0.4938));
+    font-size: calc(1.5rem + ((1vw - 3px) * 0.4938)) !important;
     min-height: 0vw;
   }
   header .right p {
-    font-size: calc(0.875rem + ((1vw - 3px) * 0.1235));
+    font-size: calc(0.875rem + ((1vw - 3px) * 0.1235)) !important;
     min-height: 0vw;
-    line-height: 170%;
-    letter-spacing: 2px;
   }
   header .right a {
     font-size: 18px;
