--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -187,7 +187,7 @@ header {
   margin: 0 auto;
 
   div.nav {
-    height: 10%;
+    height: 8%;
     width: 100%;
     padding: 0% 5%;
     display: flex;
@@ -205,7 +205,7 @@ header {
       a {
         img {
           transition: width 0.5s ease;
-          width: 35%;
+          width: 20%;
           height: auto;
         }
       }
@@ -249,9 +249,9 @@ header {
     background-color: white;
     z-index: 10;
     position: fixed;
-    height: 10%;
+    height: 7%;
     top: 0;
-    padding: 2% 5%;
+    padding: 0% 5%;
     transition: width 0.5s ease;
 
     div.logo {
@@ -259,7 +259,7 @@ header {
 
       a {
         img {
-          width: 35%;
+          width: 15%;
           height: auto;
         }
       }
@@ -459,7 +459,7 @@ section.innovation {
 
     div.content {
       width: calc(100% - 2px);
-      padding: 15% 0%;
+      padding: 10% 0%;
       display: flex;
       justify-content: space-between;
 
@@ -563,9 +563,10 @@ section.target {
   align-items: center;
   flex-direction: column;
   justify-content: space-evenly;
-  padding-top: 10%;
+  padding-top: 5%;
   height: 100%;
   padding-bottom: 5%;
+  margin-bottom: 4%;
   position: relative;
 
   div.topline {
@@ -630,7 +631,7 @@ section.target {
 
     div.container {
       width: 100%;
-      height: 100%;
+      height: 80%;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
@@ -853,7 +854,6 @@ section.target {
         .image{
           transition: .7s ease;
           display: flex;
-          justify-content: center;
           align-items: flex-end;
           width: 100%;
           height: 100%;
@@ -865,21 +865,21 @@ section.target {
           video{
             position: absolute;
             transition: .7s ease;
-            width: 60%;
             height: auto;
-            max-height: 80%;
+            max-height: 60%;
+            width: 100%;
           }
         }
         .desc{
           display: none;
           position: absolute;
-          bottom: 0%;
+          bottom: 5%;
           left: 7%;
           width: 85%;
           p{
             font-family: 'krub', sans-serif;
             font-weight: 600;
-            font-size: 18px;
+            font-size: 1rem;
             padding-bottom: 1%;
             text-align: center;
           }
@@ -889,15 +889,13 @@ section.target {
           flex: 3;
           .image{
             transition: .7s ease;
-            justify-content: flex-end;
             position: relative;
             video{
               position: absolute;
               transition: .7s ease;
-              transform: translateX(15%);
-              max-height: 70%;
-              right: 5%;
-              width: auto;
+              transform: translateX(35%);
+              max-height: 80%;
+              width: 100%;
             }
           }
           
@@ -1515,6 +1513,8 @@ footer {
 
         a {
           img {
+            width: 20%;
+            height: auto;
             transition: width 0.5s ease;
           }
         }
@@ -1564,7 +1564,7 @@ footer {
 
         a {
           img {
-            width: 50%;
+            width: 20%;
             height: auto;
           }
         }
